refactors js file layout and adds basic bulma styling

--- a/static/index.html
+++ b/static/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <title>Yacht Service Pro</title>
 </head>
 
 <body>
-    <div class="app-wrapper"></div>
+    <section class="section">
+        <div class="app-wrapper"></div>
+    </section>
 </body>
 
 </html>
