refactors menu plus bug fixes

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width = device-width, initial-scale = 1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-    <section class="section">
-        <div class="app-wrapper"></div>
-    </section>
+    <div className="container is-fullwidth">
+        <section class="section hero is-light is-fullheight">
+            <div class="container app-wrapper"></div>
+        </section>
 </body>
 
 </html>
